@@ -49,7 +49,7 @@
 #include <sortarea.h>
 
 extern FILE *outfile;
-extern int OpenFile(char *name, word mode);
+extern int Open_File(char *name, word mode);
 extern int CheckMsg(JAMHDRptr Hdr);
 
 /* --------------------------SQUISH sector ON------------------------------- */
@@ -160,7 +160,7 @@ void SquishSortArea(s_area *area)
    sprintf(sqi, "%s%s", area->fileName, EXT_SQIFILE);
    sprintf(sql, "%s%s", area->fileName, EXT_SQLFILE);
 
-   SqdHandle = OpenFile(sqd, fop_rpb);
+   SqdHandle = Open_File(sqd, fop_rpb);
    free(sqd);
 
    if (SqdHandle == -1) {
@@ -169,7 +169,7 @@ void SquishSortArea(s_area *area)
       return;
    } /* endif */
       
-   SqiHandle = OpenFile(sqi, fop_rpb);
+   SqiHandle = Open_File(sqi, fop_rpb);
    free(sqi);
 
    if (SqiHandle == -1) {
@@ -178,7 +178,7 @@ void SquishSortArea(s_area *area)
       return;
    } /* endif */
 
-   SqlHandle = OpenFile(sql, fop_rpb);
+   SqlHandle = Open_File(sql, fop_rpb);
    free(sql);
 
    if (SqlHandle == -1) {
@@ -341,7 +341,7 @@ void JamSortArea(s_area *area)
    sprintf(idx, "%s%s", area->fileName, EXT_IDXFILE);
    sprintf(lrd, "%s%s", area->fileName, EXT_LRDFILE);
 
-   IdxHandle = OpenFile(idx, fop_rpb);
+   IdxHandle = Open_File(idx, fop_rpb);
 
    free(idx);
 
@@ -350,7 +350,7 @@ void JamSortArea(s_area *area)
       return;
    } /* endif */
 
-   HdrHandle = OpenFile(hdr, fop_rpb);
+   HdrHandle = Open_File(hdr, fop_rpb);
 
    free(hdr);
 
@@ -359,7 +359,7 @@ void JamSortArea(s_area *area)
       return;
    } /* endif */
 
-   LrdHandle = OpenFile(lrd, fop_rpb);
+   LrdHandle = Open_File(lrd, fop_rpb);
 
    if (LrdHandle == -1) {
       lastread = 0;
