@@ -2,6 +2,13 @@ hptutil 1.01
 ---------------
 
 ----- cvs ci ------
+Fri Feb 11 22:17:03 NOVT 2000
+max:
+* add makefile.sun (patch from Serguei Revtov)
+* change OpenFile to Open_File for compiling under win32
+* del 0x0A in files
+
+----- cvs ci ------
 Sat Feb  5 02:36:03 NOVT 2000
 max:
 * added -zp=1 to makefile.wcw
